# test_task

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  builder.sh  compile.sh
common/include/: cmd.h  defaults.h  defines.h  error_code.h  gpio_helpers.h  helpers.h  logs.h  network_helpers.h  protocol.h  socket_helpers.h  spi_helpers.h
common/src/: gpio_helpers.c  helpers.c  logs.c  protocol.c  socket_helpers.c  spi_helpers.c
common/src/esp32/: gpio_helpers.c  logs.c  network_helpers.c  spi_helpers.c
common/src/linux/: gpio_helpers.c  helpers.c  logs.c  protocol.c  socket_helpers.c  spi_helpers.c
desktop/: CMakeLists.txt
desktop/include/: cli.h  cmd.h  defaults.h  error_code.h  logo.h  logs.h  simple_options.h  socket_helpers.h  types.h
desktop/src/: cli.c  client.c  cmd_impl.c  helpers.c  main.c  simple_options.c  socket_helpers.c
doc/: Architecture&Protocol.md  Design.drawio  desktop_config.txt  test_results.txt  usefull_links.txt  wired_RP_ESP32.txt
esp32-lwip-forward-trace/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
esp32-lwip-forward-trace/main/: CMakeLists.txt  main.c  main_.c  main_1.c  main_2.c  main_3.c  main_4.c  main_send.c  test_spi_slave.c
esp32_spi_router/: CMakeLists.txt  sdkconfig
esp32_spi_router/main/: CMakeLists.txt  esp32_spi_router.c  esp32_spi_router_1.c  esp32_spi_router_2.c  esp32_spi_router_3.c  esp32_spi_router_4.c  esp32_spi_router_org.c
raspberry/: CMakeLists.txt  README.md  toolchain-rpi-zero.cmake
raspberry/doc/: SPI_tunnel.md  raspberry_setup.txt  wired_RP_ESP32.txt
raspberry/proxy/: CMakeLists.txt
raspberry/proxy/src/: proxy.c  proxy_read.c  test_spi_master.c
raspberry/server/: CMakeLists.txt
raspberry/server/src/: server.c
